@@ -1,3 +1,8 @@
+Sat Feb 07 16:08:59 PST 2004  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimProtocolBox.cpp:
+	  - The first listed protocol is now the default.
+
 Sat Feb 07 15:43:34 PST 2004  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
